px4_ws/logs/rgbd_slam/build.make.002.log
[  0%] [  0%] Built target roscpp_generate_messages_cpp
Built target roscpp_generate_messages_lisp
[  0%] [  0%] [  0%] [  0%] [  0%] Built target std_msgs_generate_messages_cpp
Built target std_msgs_generate_messages_py
Built target roscpp_generate_messages_py
Built target geometry_msgs_generate_messages_lisp
Built target std_msgs_generate_messages_lisp
[ 83%] [ 83%] [ 83%] Built target frontend
Built target rosgraph_msgs_generate_messages_py
Built target rosgraph_msgs_generate_messages_cpp
[ 83%] [ 83%] [ 83%] Built target rosgraph_msgs_generate_messages_lisp
Built target geometry_msgs_generate_messages_py
Built target geometry_msgs_generate_messages_cpp
[ 91%] [32mBuilding CXX object CMakeFiles/rgbd_slam.dir/src/RosHandler.cpp.o
/home/odroid/MAV-Project/px4_ws/src/rgbd_slam/src/RosHandler.cpp:35:1: error: expected declaration before '}' token
 };
 ^
make[2]: *** [CMakeFiles/rgbd_slam.dir/src/RosHandler.cpp.o] Error 1
make[1]: *** [CMakeFiles/rgbd_slam.dir/all] Error 2
make: *** [all] Error 2
